--- a/my_app/src/pages/pages.css
+++ b/my_app/src/pages/pages.css
@@ -1,29 +1,67 @@
 .descriptionH{
     text-align: center;
     font-weight:800;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Imported;
 }
 .description {
     font-family: 'Courier New', Courier, monospace;
     color: azure;
-    padding: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    max-width: 1600px;
 }
 
 
 .profilePic {
-    width: 300px;
+    width: 400px;
     height: 400px;
+    border-image: round;
     background-image: url(../images/me.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    border-radius: 30% ;
+    
+    /* background-size: cover;
+    background-position:900%;
+    background-repeat: no-repeat; */
+    border-radius: 100% ;
         
 }
+.resume {
+    width: 100%;
+    height: 100%;
+    display: flex; /* Use flexbox to center content */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+
+}
+.resumeCont {
+    width: 100%; /* Expand to full width of the viewport */
+    height: 100%; /* Expand to full height of the viewport */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.resumeCont img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    transition: transform 0.3s; /* Add a transition for smooth zoom effect */
+}
+
+.resumeCont img:hover {
+    transform: scale(1.3); /* Scale the image up by 20% on hover */
+}
+
 .cc{
     display: flex;
     justify-content: center;
     align-items: center;
     
+}
+.cc1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
 }
 .hobbyH{
     text-decoration: underline;
@@ -57,11 +95,10 @@
     color: azure;
 }
 .sectionBack{
-   
     border-radius: 3%;
     padding: 5px;
-    
 }
+
 .Alink{
     color: azure;
     text-decoration: underline;
@@ -72,8 +109,49 @@
     
     
 }
+.social{
+    margin-right: 15px;
+}
+@font-face {
+    font-family: Imported;
+    src: url(/src/fonts/SofiaProBlack.ttf);
+  }
+  
+  .imported {
+    font-family: Imported;
+  }
 /* .profilePic:hover{
     width: 500px;
     height: 600px;
 } */
+
+/* Hide the modal by default */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+/* Style the modal content */
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+/* Style the close button */
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
 
