Refactored UI and added Resume tab

--- a/my_app/src/components/comp.css
+++ b/my_app/src/components/comp.css
@@ -1,10 +1,10 @@
 .text{
-    color: azure;
+    color: black;
     font-weight: bold;
     font-size: 20px;
 }
 .navColor{
-    color:black
+    color:whitesmoke
 }
 .cc{
     display: flex;
