--- a/my_app/src/pages/pages.css
+++ b/my_app/src/pages/pages.css
@@ -1,43 +1,48 @@
-.descriptionH{
+.descriptionH {
     text-align: center;
-    font-weight:800;
+    font-weight: 800;
     font-family: Imported;
 }
+
 .description {
     font-family: ubuntu;
-    color: azure;
+    color: black;
     padding-left: 5px;
     padding-right: 5px;
     max-width: 1600px;
 }
 
-.box{
+.box {
     padding: 1%;
     font-family: ubuntu;
-    
+
 }
 
-.projects{
-    padding-left: 3% ;
+.tab {
+    font-size: 90%;
+}
+
+.projects {
+    padding-left: 3%;
     font-family: ubuntuBold;
-    font-weight: 500;
-    
-    font-size: 18px;
+    font-style: oblique;
+    padding-bottom: 1%;
 }
 
-.projectDetails{
+.projectDetails {
     padding-left: 15%;
-    padding-bottom: 5px;   
-    width: auto; 
+    padding-bottom: 5%;
+    width: auto;
     font-family: ubuntu;
-    font-size: 15px;
 
 }
-h6{
+
+h6 {
     padding: 0px;
     margin: 0px;
 }
-li{
+
+li {
     padding-bottom: 5px;
 }
 
@@ -45,149 +50,120 @@ li{
 .profilePic {
     width: 400px;
     height: 400px;
-    border-image: round;
+    background-position: 20%;
     background-image: url(../images/me.png);
-    
-    /* background-size: cover;
-    background-position:900%;
-    background-repeat: no-repeat; */
-    border-radius: 100% ;
-        
-}
-.resume {
-    width: 100%;
-    height: 100%;
-    display: flex; /* Use flexbox to center content */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
+    border-radius: 100%;
+    background-size: cover;
 
 }
-.resumeCont {
-    width: 100%; /* Expand to full width of the viewport */
-    height: 100%; /* Expand to full height of the viewport */
+
+.resumeBox {
+    background-color: azure;
+    font-family: ubuntu
+    
+}
+
+.resumeCC{
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
-.resumeCont img {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
-    transition: transform 0.3s; /* Add a transition for smooth zoom effect */
+
+
+.resumeButton{
+    color: black;
 }
 
 .resumeCont img:hover {
-    transform: scale(1.3); /* Scale the image up by 20% on hover */
+    transform: scale(1.3);
+    /* Scale the image up by 20% on hover */
 }
 
-.cc{
+.cc {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
-.cc1{
+
+.cc1 {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 500px;
 }
 
-.introduction{
-    color: antiquewhite;
+.introduction {
+    color: black;
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
     margin: auto;
     max-width: 70%;
 
 }
-.generalText{
-    color: azure;
+
+.generalText {
+    color: black;
 }
-.projectCategory{
-    font-size: 30px;
-}
-.sectionBack{
+
+.sectionBack {
     border-radius: 3%;
     padding: 5px;
 }
-.aboutme{
+
+.aboutme {
     font-size: 20px;
     padding-bottom: 12px;
 }
-.Alink{
+
+.Alink {
     color: azure;
     text-decoration: underline;
-    
+
 }
-.Alink:visited{
-    color: cyan;
-    
-    
+
+.Alink:visited {
+    color: purple;
+
+
 }
-.social{
+
+.social {
     margin-right: 15px;
 }
+
 @font-face {
     font-family: Imported;
     src: url(/src/fonts/SofiaProBlack.ttf);
-  }
-  
-  .imported {
-    font-family: Imported;
-  }
+}
 
-  @font-face {
+.imported {
+    font-family: Imported;
+}
+
+@font-face {
     font-family: ubuntu;
     src: url(/src/fonts/ubuntu/Ubuntu-Medium.ttf);
-  }
-  
-  .ubuntu {
-    font-family: ubuntu;
-  }
+}
 
-  @font-face {
+.ubuntu {
+    font-family: ubuntu;
+}
+
+@font-face {
     font-family: ubuntuBold;
     src: url(/src/fonts/ubuntu/Ubuntu-Bold.ttf);
-  }
-  
-  .ubuntuBold {
+}
+
+.ubuntuBold {
     font-family: ubuntuBold;
-  }
+}
+
 /* .profilePic:hover{
     width: 500px;
     height: 600px;
 } */
 
 /* Hide the modal by default */
-.modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-}
-
-/* Style the modal content */
-.modal-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    text-align: center;
-}
-
-/* Style the close button */
-.close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
-}
-
